# backend/src/main/resources/swagger/contract.yml
@@ -7,6 +7,8 @@ servers:
   - url: http://localhost:8080
     description: Servidor local
 tags:
+  - name: Usuarios
+    description: Conjunto de operações envolvendo usuários
   - name: Abrigos
     description: Conjunto de operações envolvendo abrigos
   - name: Recursos
@@ -16,6 +18,57 @@ tags:
   - name: Notificacao
     description: Conjunto de operações envolvendo notificações
 paths:
+  /usuario/login:
+    post:
+      tags:
+        - Usuarios
+      summary: Realiza o login de um usuário
+      operationId: loginUsuario
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginRequest'
+      responses:
+        '200':
+          description: Login realizado com sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoginResponse'
+        '401':
+          description: Credenciais inválidas
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Erro'
+
+  /usuario/cadastro:
+    post:
+      tags:
+        - Usuarios
+      summary: Realiza o cadastro de um novo usuário
+      operationId: cadastrarUsuario
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CadastroUsuarioRequest'
+      responses:
+        '201':
+          description: Usuário cadastrado com sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UsuarioResponse'
+        '400':
+          description: Dados inválidos para cadastro
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Erro'
   /abrigo:
     get:
       tags:
@@ -230,6 +283,74 @@ components:
         type: integer
         format: int32
   schemas:
+    LoginRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+          example: "usuario@exemplo.com"
+        senha:
+          type: string
+          format: password
+          example: "senha123"
+      required:
+        - email
+        - senha
+    LoginResponse:
+      type: object
+      properties:
+        token:
+          type: string
+          example: "jwt_token_123"
+      required:
+        - token
+
+    CadastroUsuarioRequest:
+      type: object
+      properties:
+        cpf:
+          type: string
+          example: "123.456.789-00"
+        nome:
+          type: string
+          example: "João da Silva"
+        endereco:
+          type: string
+          example: "Rua das Flores, 123"
+        email:
+          type: string
+          format: email
+          example: "usuario@exemplo.com"
+        senha:
+          type: string
+          format: password
+          example: "senha123"
+      required:
+        - cpf
+        - nome
+        - email
+        - senha
+
+    UsuarioResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          example: 1
+        nome:
+          type: string
+          example: "João da Silva"
+        email:
+          type: string
+          format: email
+          example: "usuario@exemplo.com"
+      required:
+        - id
+        - nome
+        - email
+
     AbrigoResponse:
       type: object
       properties:
